fix: image not load when deploy to github pages

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link href="/style/style.css" rel="stylesheet" />
+    <link href="style/style.css" rel="stylesheet" />
   </head>
   <body class="bg-dark">
     <nav class="navbar fixed-top bg-body navbar-expand-lg bg-transparent">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img
-            src="/assets/images/lplogo.png"
+            src="assets/images/lplogo.png"
             alt="Linkin Park"
             width="30"
             height="30"
@@ -83,7 +83,7 @@
         <!-- Slide 1 -->
         <div class="carousel-item active">
           <img
-            src="/assets/images/chester1.jpg"
+            src="assets/images/chester1.jpg"
             class="banner-photo"
             alt="..."
           />
@@ -98,7 +98,7 @@
         <!-- Slide 2 -->
         <div class="carousel-item">
           <img
-            src="/assets/images/chester2.jpg"
+            src="assets/images/chester2.jpg"
             class="banner-photo"
             alt="..."
           />
@@ -113,7 +113,7 @@
         <!-- Slide 3 -->
         <div class="carousel-item">
           <img
-            src="/assets/images/chester3.jpg"
+            src="assets/images/chester3.jpg"
             class="banner-photo"
             alt="..."
           />
@@ -128,7 +128,7 @@
         <!-- Slide 4 -->
         <div class="carousel-item">
           <img
-            src="/assets/images/chester4.jpg"
+            src="assets/images/chester4.jpg"
             class="banner-photo"
             alt="..."
           />
@@ -154,7 +154,7 @@
           <!-- Slide 1 -->
           <div class="carousel-item active">
             <img
-              src="/assets/images/chester1.jpg"
+              src="assets/images/chester1.jpg"
               class="banner-photo"
               alt="..."
             />
@@ -167,7 +167,7 @@
           <!-- Slide 2 -->
           <div class="carousel-item">
             <img
-              src="/assets/images/chester2.jpg"
+              src="assets/images/chester2.jpg"
               class="banner-photo"
               alt="..."
             />
@@ -180,7 +180,7 @@
           <!-- Slide 3 -->
           <div class="carousel-item">
             <img
-              src="/assets/images/chester3.jpg"
+              src="assets/images/chester3.jpg"
               class="banner-photo"
               alt="..."
             />
@@ -193,7 +193,7 @@
           <!-- Slide 4 -->
           <div class="carousel-item">
             <img
-              src="/assets/images/chester4.jpg"
+              src="assets/images/chester4.jpg"
               class="banner-photo"
               alt="..."
             />
