--- a/index.html
+++ b/index.html
@@ -33,40 +33,36 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="32"
+            height="32"
+            fill="white"
+            class="bi bi-list"
+            viewBox="0 0 16 16"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"
+            />
+          </svg>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
           <ul
-            class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll"
-            style="--bs-scroll-height: 100px"
+            class="navbar-nav nav-underline ms-auto my-2 my-lg-0"
+            style="--bs-scroll-height: 300px"
           >
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
               >
-                Link
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Link</a>
+              <a class="nav-link" href="form.html">Registrasi</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="tabel.html">List Lagu</a>
             </li>
           </ul>
         </div>
@@ -77,7 +73,7 @@
       id="carouselExampleSlidesOnly"
       class="carousel slide carousel-fade"
       data-bs-ride="carousel"
-      data-bs-interval="3000"
+      data-bs-interval="1500"
     >
       <div class="carousel-inner h-100">
         <!-- Slide 1 -->
@@ -142,69 +138,357 @@
       </div>
     </div>
 
-    <div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout">
-      <!-- Carousel -->
-      <div
-        id="carouselExampleSlidesOnly"
-        class="carousel slide carousel-fade"
-        data-bs-ride="carousel"
-        data-bs-interval="3000"
-      >
-        <div class="carousel-inner h-100">
-          <!-- Slide 1 -->
-          <div class="carousel-item active">
-            <img
-              src="assets/images/chester1.jpg"
-              class="banner-photo"
-              alt="..."
-            />
-            <div class="carousel-caption">
-              <h1>Tribute to Chester Bennington</h1>
-              <h2 class="mt-5">A Fan Made For Linkin Park</h2>
+    <div class="container-xxl mt-3 my-md-4 bd-layout">
+      <div class="row">
+        <!-- Left Sidebar -->
+        <div class="col-lg-2 col-md-3 col-sm-12 sidebar">
+          <h4 class="bi bi-list-task fs-4 fw-bold">Daftar Isi</h4>
+          <a class="fw-normal" href="#dengarkan">Dengar Musik</a>
+          <a class="fw-normal" href="#sejarah">Sejarah</a>
+          <a class="fw-normal" href="#album">Album</a>
+          <a class="fw-normal" href="#anggota">Anggota Band</a>
+        </div>
+
+        <!-- Main Content -->
+        <div
+          class="col-lg-10 col-md-9 col-sm-12 content d-flex flex-column gap-3"
+        >
+          <div class="content-section">
+            <p class="fs-6">
+              Selamat datang di situs penggemar Linkin Park yang didedikasikan
+              khusus untuk mengenang vokalis legendaris, Chester Bennington. Di
+              sini, kita merayakan perjalanan luar biasa band ini dan
+              menghormati warisan Chester yang tak tergantikan dalam dunia
+              musik. Temukan kisah di balik band ini, album mereka yang
+              berpengaruh, dan lagu-lagu yang menginspirasi jutaan orang di
+              seluruh dunia.
+            </p>
+          </div>
+
+          <div class="content-section">
+            <h2 id="dengarkan" class="fs-2">Dengarkan lagu</h2>
+            <iframe
+              style="border-radius: 12px"
+              src="https://open.spotify.com/embed/track/3xXBsjrbG1xQIm1xv1cKOt?utm_source=generator"
+              width="50%"
+              height="152px"
+              frameborder="0"
+              allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"
+            ></iframe>
+          </div>
+
+          <div class="content-section">
+            <h2 id="sejarah" class="fs-2">Sejarah</h2>
+            <ul>
+              <li>1996 - Pembentukan Band</li>
+              <p>
+                Linkin Park dibentuk di Agoura Hills, California oleh tiga teman
+                sekolah menengah: Mike Shinoda, Brad Delson, dan Rob Bourdon.
+                Nama awal mereka adalah Xero, dan band ini kemudian merekrut Joe
+                Hahn, Dave "Phoenix" Farrell, dan Mark Wakefield sebagai vokalis
+                awal.
+              </p>
+
+              <li>1999 - Perubahan Nama dan Bergabungnya Chester Bennington</li>
+              <p>
+                Setelah Mark Wakefield meninggalkan band, Chester Bennington
+                dari Arizona bergabung sebagai vokalis utama pada tahun 1999,
+                menggantikan Wakefield. Band ini mengubah nama mereka menjadi
+                Linkin Park, terinspirasi dari Lincoln Park di Santa Monica,
+                California.
+              </p>
+
+              <li>2000 - Album Debut "Hybrid Theory"</li>
+              <p>
+                Album debut mereka, Hybrid Theory, dirilis pada Oktober 2000 dan
+                menjadi sukses besar, dengan penjualan lebih dari 10 juta kopi
+                di Amerika Serikat. Lagu-lagu seperti In the End, Crawling, dan
+                One Step Closer membantu Linkin Park mencapai puncak
+                popularitas, dan album ini dianggap sebagai salah satu yang
+                terbaik dalam genre nu-metal.
+              </p>
+
+              <li>2003 - Album Kedua "Meteora"</li>
+              <p>
+                Linkin Park merilis album kedua mereka, Meteora, pada tahun
+                2003. Album ini melanjutkan kesuksesan Hybrid Theory, dengan
+                lagu-lagu hit seperti Numb, Somewhere I Belong, dan Breaking the
+                Habit. Album ini menggabungkan elemen rock, nu-metal, dan
+                elektronik, menjadikannya salah satu album terlaris di dekade
+                2000-an.
+              </p>
+
+              <li>2007 - "Minutes to Midnight" dan Evolusi Musik</li>
+              <p>
+                Pada 2007, Linkin Park merilis album ketiga mereka, Minutes to
+                Midnight, yang menandai pergeseran gaya dari nu-metal ke arah
+                rock alternatif. Lagu-lagu seperti What I've Done, Bleed It Out,
+                dan Shadow of the Day menampilkan suara yang lebih dewasa dan
+                lebih mendalam secara lirik.
+              </p>
+
+              <li>
+                2010 - Eksplorasi Gaya Musik Baru dengan "A Thousand Suns"
+              </li>
+              <p>
+                Linkin Park mengeksplorasi lebih jauh elemen eksperimental dan
+                elektronik dengan album keempat mereka, A Thousand Suns. Album
+                ini berfokus pada tema sosial dan politik, dengan lagu-lagu
+                seperti The Catalyst dan Waiting for the End.
+              </p>
+
+              <li>2012 - "Living Things" dan Kombinasi Elemen Lama dan Baru</li>
+              <p>
+                Living Things, album kelima yang dirilis pada 2012, adalah upaya
+                untuk menggabungkan elemen dari gaya awal mereka dengan elemen
+                baru seperti elektronik dan pop. Lagu-lagu seperti Burn It Down
+                dan Lost in the Echo menunjukkan keberhasilan kombinasi
+                tersebut.
+              </p>
+
+              <li>2014 - Kembali ke Akar Rock dengan "The Hunting Party"</li>
+              <p>
+                Pada 2014, Linkin Park kembali ke suara rock yang lebih keras
+                dengan album The Hunting Party. Album ini memiliki pendekatan
+                yang lebih mentah dan agresif dengan lagu-lagu seperti Guilty
+                All the Same dan Final Masquerade.
+              </p>
+
+              <li>2017 - "One More Light" dan Kehilangan Chester Bennington</li>
+              <p>
+                Album ketujuh mereka, One More Light, dirilis pada Mei 2017 dan
+                menampilkan suara yang lebih pop dan introspektif. Beberapa
+                bulan setelah perilisan album, pada 20 Juli 2017, Chester
+                Bennington meninggal dunia karena bunuh diri. Kepergiannya
+                mengejutkan dunia musik dan jutaan penggemar di seluruh dunia.
+              </p>
+
+              <li>Pasca-2017 - Mengenang Chester dan Masa Depan Linkin Park</li>
+              <p>
+                Setelah kepergian Chester, band ini belum merilis album baru,
+                tetapi anggota band, terutama Mike Shinoda, telah aktif dalam
+                proyek solo dan berbagai penghargaan untuk Chester. Linkin Park
+                terus merayakan warisan mereka melalui penggemar di seluruh
+                dunia dan mengenang kontribusi besar Chester Bennington terhadap
+                musik dan kehidupan banyak orang.
+              </p>
+            </ul>
+          </div>
+
+          <div class="content-section">
+            <h2 id="album" class="fs-2">Album</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+              <!-- Card 1: Hybrid Theory -->
+              <div class="col">
+                <div class="card h-100">
+                  <img
+                    src="assets/images/hybridtheory.jpeg"
+                    class="card-img-top"
+                    alt="Hybrid Theory"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Hybrid Theory</h5>
+                    <p class="card-text">Tahun: 2000</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Card 2: Meteora -->
+              <div class="col">
+                <div class="card h-100">
+                  <img
+                    src="assets/images/meteora.jpg"
+                    class="card-img-top"
+                    alt="Meteora"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Meteora</h5>
+                    <p class="card-text">Tahun: 2003</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Card 3: Minutes to Midnight -->
+              <div class="col">
+                <div class="card h-100">
+                  <img
+                    src="assets/images/minutestomidnight.jpg"
+                    class="card-img-top"
+                    alt="Minutes to Midnight"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Minutes to Midnight</h5>
+                    <p class="card-text">Tahun: 2007</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Card 4: A Thousand Suns -->
+              <div class="col">
+                <div class="card h-100">
+                  <img
+                    src="assets/images/athousandsuns.jpg"
+                    class="card-img-top"
+                    alt="A Thousand Suns"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">A Thousand Suns</h5>
+                    <p class="card-text">Tahun: 2010</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Card 5: Living Things -->
+              <div class="col">
+                <div class="card h-100">
+                  <img
+                    src="assets/images/livingthings.jpg"
+                    class="card-img-top"
+                    alt="Living Things"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Living Things</h5>
+                    <p class="card-text">Tahun: 2012</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Card 6: The Hunting Party -->
+              <div class="col">
+                <div class="card h-100">
+                  <img
+                    src="assets/images/thehuntingparty.jpg"
+                    class="card-img-top"
+                    alt="The Hunting Party"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">The Hunting Party</h5>
+                    <p class="card-text">Tahun: 2014</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Card 7: One More Light -->
+              <div class="col">
+                <div class="card h-100">
+                  <img
+                    src="assets/images/onemorelight.jpeg"
+                    class="card-img-top"
+                    alt="One More Light"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">One More Light</h5>
+                    <p class="card-text">Tahun: 2017</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
-          <!-- Slide 2 -->
-          <div class="carousel-item">
-            <img
-              src="assets/images/chester2.jpg"
-              class="banner-photo"
-              alt="..."
-            />
-            <div class="carousel-caption">
-              <h1>Tribute to Chester Bennington</h1>
-              <h2 class="mt-5">A Fan Made For Linkin Park</h2>
-            </div>
-          </div>
+          <div class="content-section">
+            <h2 id="anggota" class="fs-2">Anggota Band</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+              <!-- Card 1: Chester Bennington -->
+              <div class="col">
+                <div class="card h-100 border-3 border-3">
+                  <img
+                    src="assets/images/chester.webp"
+                    class="card-img-people"
+                    alt="Chester Bennington"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Chester Bennington</h5>
+                    <p class="card-text">Tahun: 2000</p>
+                  </div>
+                </div>
+              </div>
 
-          <!-- Slide 3 -->
-          <div class="carousel-item">
-            <img
-              src="assets/images/chester3.jpg"
-              class="banner-photo"
-              alt="..."
-            />
-            <div class="carousel-caption">
-              <h1>Tribute to Chester Bennington</h1>
-              <h2 class="mt-5">A Fan Made For Linkin Park</h2>
-            </div>
-          </div>
+              <!-- Card 2: Mike Shinoda -->
+              <div class="col">
+                <div class="card h-100 border-3">
+                  <img
+                    src="assets/images/mikeshinoda.webp"
+                    class="card-img-people"
+                    alt="Mike Shinoda"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Mike Shinoda</h5>
+                    <p class="card-text">Tahun: 2003</p>
+                  </div>
+                </div>
+              </div>
 
-          <!-- Slide 4 -->
-          <div class="carousel-item">
-            <img
-              src="assets/images/chester4.jpg"
-              class="banner-photo"
-              alt="..."
-            />
-            <div class="carousel-caption">
-              <h1>Tribute to Chester Bennington</h1>
-              <h2 class="mt-5">A Fan Made For Linkin Park</h2>
+              <!-- Card 3: Brad Delson -->
+              <div class="col">
+                <div class="card h-100 border-3">
+                  <img
+                    src="assets/images/braddelson.jpg"
+                    class="card-img-people"
+                    alt="Brad Delson"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Brad Delson</h5>
+                    <p class="card-text">Tahun: 2007</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Card 4: Rob Bourdon -->
+              <div class="col">
+                <div class="card h-100 border-3">
+                  <img
+                    src="assets/images/bourdon.png"
+                    class="card-img-people"
+                    alt="Rob Bourdon"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Rob Bourdon</h5>
+                    <p class="card-text">Tahun: 2010</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Card 5: Dave "Phoenix" Farrell -->
+              <div class="col">
+                <div class="card h-100 border-3">
+                  <img
+                    src="assets/images/dave.jpg"
+                    class="card-img-people"
+                    alt='Dave "Phoenix" Farrell'
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Dave "Phoenix" Farrell</h5>
+                    <p class="card-text">Tahun: 2012</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Card 6: Joe Hahn -->
+              <div class="col">
+                <div class="card h-100 border-3">
+                  <img
+                    src="assets/images/joehan.jpg"
+                    class="card-img-people"
+                    alt="Joe Hahn"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Joe Hahn</h5>
+                    <p class="card-text">Tahun: 2014</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Footer -->
+    <footer>
+      <p>©2024 Ujian Tengah Semester - Cornelius Linux - 122140079</p>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
