--- a/index.html
+++ b/index.html
@@ -182,7 +182,10 @@
           <div class="content-section">
             <h2 id="sejarah" class="fs-2">Sejarah</h2>
             <ul>
-              <li>1996 - Pembentukan Band</li>
+              <li>
+                <span class="dtstart" title="1996">1996</span> - Pembentukan
+                Band
+              </li>
               <p>
                 Linkin Park dibentuk di Agoura Hills, California oleh tiga teman
                 sekolah menengah: Mike Shinoda, Brad Delson, dan Rob Bourdon.
@@ -191,7 +194,10 @@
                 awal.
               </p>
 
-              <li>1999 - Perubahan Nama dan Bergabungnya Chester Bennington</li>
+              <li>
+                <span class="dtstart" title="1999">1999</span> - Perubahan Nama
+                dan Bergabungnya Chester Bennington
+              </li>
               <p>
                 Setelah Mark Wakefield meninggalkan band, Chester Bennington
                 dari Arizona bergabung sebagai vokalis utama pada tahun 1999,
@@ -200,7 +206,7 @@
                 California.
               </p>
 
-              <li>2000 - Album Debut "Hybrid Theory"</li>
+              <li><span class="dtstart" title="2000">2000</span> - Album Debut "Hybrid Theory"</li>
               <p>
                 Album debut mereka, Hybrid Theory, dirilis pada Oktober 2000 dan
                 menjadi sukses besar, dengan penjualan lebih dari 10 juta kopi
@@ -210,7 +216,7 @@
                 terbaik dalam genre nu-metal.
               </p>
 
-              <li>2003 - Album Kedua "Meteora"</li>
+              <li><span class="dtstart" title="2003">2003</span> - Album Kedua "Meteora"</li>
               <p>
                 Linkin Park merilis album kedua mereka, Meteora, pada tahun
                 2003. Album ini melanjutkan kesuksesan Hybrid Theory, dengan
@@ -220,7 +226,7 @@
                 2000-an.
               </p>
 
-              <li>2007 - "Minutes to Midnight" dan Evolusi Musik</li>
+              <li><span class="dtstart" title="2007">2007</span> - "Minutes to Midnight" dan Evolusi Musik</li>
               <p>
                 Pada 2007, Linkin Park merilis album ketiga mereka, Minutes to
                 Midnight, yang menandai pergeseran gaya dari nu-metal ke arah
@@ -230,7 +236,7 @@
               </p>
 
               <li>
-                2010 - Eksplorasi Gaya Musik Baru dengan "A Thousand Suns"
+                <span class="dtstart" title="2010">2010</span> - Eksplorasi Gaya Musik Baru dengan "A Thousand Suns"
               </li>
               <p>
                 Linkin Park mengeksplorasi lebih jauh elemen eksperimental dan
@@ -239,7 +245,7 @@
                 seperti The Catalyst dan Waiting for the End.
               </p>
 
-              <li>2012 - "Living Things" dan Kombinasi Elemen Lama dan Baru</li>
+              <li><span class="dtstart" title="2012">2012</span>  - "Living Things" dan Kombinasi Elemen Lama dan Baru</li>
               <p>
                 Living Things, album kelima yang dirilis pada 2012, adalah upaya
                 untuk menggabungkan elemen dari gaya awal mereka dengan elemen
@@ -248,7 +254,7 @@
                 tersebut.
               </p>
 
-              <li>2014 - Kembali ke Akar Rock dengan "The Hunting Party"</li>
+              <li><span class="dtstart" title="2014">2014</span> - Kembali ke Akar Rock dengan "The Hunting Party"</li>
               <p>
                 Pada 2014, Linkin Park kembali ke suara rock yang lebih keras
                 dengan album The Hunting Party. Album ini memiliki pendekatan
@@ -256,7 +262,7 @@
                 All the Same dan Final Masquerade.
               </p>
 
-              <li>2017 - "One More Light" dan Kehilangan Chester Bennington</li>
+              <li><span class="dtstart" title="2017">2017</span> - "One More Light" dan Kehilangan Chester Bennington</li>
               <p>
                 Album ketujuh mereka, One More Light, dirilis pada Mei 2017 dan
                 menampilkan suara yang lebih pop dan introspektif. Beberapa
@@ -265,7 +271,7 @@
                 mengejutkan dunia musik dan jutaan penggemar di seluruh dunia.
               </p>
 
-              <li>Pasca-2017 - Mengenang Chester dan Masa Depan Linkin Park</li>
+              <li><span class="dtstart" title="Pasca-2017">Pasca-2017</span> - Mengenang Chester dan Masa Depan Linkin Park</li>
               <p>
                 Setelah kepergian Chester, band ini belum merilis album baru,
                 tetapi anggota band, terutama Mike Shinoda, telah aktif dalam
