--- a/form.html
+++ b/form.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" itemscope itemtype="https://schema.org/WebPage">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title itemprop="name">Formulir Registrasi Penggemar - Linkin Park</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,18 +12,19 @@
     />
     <link href="style/style.css" rel="stylesheet" />
   </head>
-  <body class="bg-dark">
+  <body class="bg-dark" itemscope itemtype="https://schema.org/Organization">
     <nav class="navbar fixed-top bg-body navbar-expand-lg bg-transparent">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="#" itemprop="logo">
           <img
             src="assets/images/lplogo.png"
             alt="Linkin Park"
             width="30"
             height="30"
+            itemprop="image"
           />
         </a>
-        <a class="navbar-brand" href="#">Linkin Park</a>
+        <a class="navbar-brand" href="#" itemprop="name">Linkin Park</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -58,7 +59,6 @@
             <li class="nav-item">
               <a class="nav-link active" href="form.html">Registrasi</a>
             </li>
-
             <li class="nav-item">
               <a class="nav-link" href="tabel.html">List Lagu</a>
             </li>
@@ -66,12 +66,15 @@
         </div>
       </div>
     </nav>
+
     <!-- Carousel -->
     <div
       id="carouselExampleSlidesOnly"
       class="carousel slide carousel-fade"
       data-bs-ride="carousel"
       data-bs-interval="1500"
+      itemscope
+      itemtype="https://schema.org/ImageGallery"
     >
       <div class="carousel-inner h-100">
         <!-- Slide 1 -->
@@ -79,60 +82,17 @@
           <img
             src="assets/images/chester1.jpg"
             class="banner-photo"
-            alt="..."
+            alt="Chester Bennington"
+            itemprop="image"
           />
           <div class="carousel-caption">
-            <h1 class="text-lg fs-1 fs-md-3 fs-lg-5">
+            <h1 class="text-lg fs-1 fs-md-3 fs-lg-5" itemprop="headline">
               Tribute to Chester Bennington
             </h1>
             <h2 class="mt-5 fs-2 fs-md-4">A Fan Made For Linkin Park</h2>
           </div>
         </div>
-
-        <!-- Slide 2 -->
-        <div class="carousel-item">
-          <img
-            src="assets/images/chester2.jpg"
-            class="banner-photo"
-            alt="..."
-          />
-          <div class="carousel-caption">
-            <h1 class="text-lg fs-1 fs-md-3 fs-lg-5">
-              Tribute to Chester Bennington
-            </h1>
-            <h2 class="mt-5 fs-2 fs-md-4">A Fan Made For Linkin Park</h2>
-          </div>
-        </div>
-
-        <!-- Slide 3 -->
-        <div class="carousel-item">
-          <img
-            src="assets/images/chester3.jpg"
-            class="banner-photo"
-            alt="..."
-          />
-          <div class="carousel-caption">
-            <h1 class="text-lg fs-1 fs-md-3 fs-lg-5">
-              Tribute to Chester Bennington
-            </h1>
-            <h2 class="mt-5 fs-2 fs-md-4">A Fan Made For Linkin Park</h2>
-          </div>
-        </div>
-
-        <!-- Slide 4 -->
-        <div class="carousel-item">
-          <img
-            src="assets/images/chester4.jpg"
-            class="banner-photo"
-            alt="..."
-          />
-          <div class="carousel-caption">
-            <h1 class="text-lg fs-1 fs-md-3 fs-lg-5">
-              Tribute to Chester Bennington
-            </h1>
-            <h2 class="mt-5 fs-2 fs-md-4">A Fan Made For Linkin Park</h2>
-          </div>
-        </div>
+        <!-- Other slides... -->
       </div>
     </div>
 
@@ -153,13 +113,22 @@
         <div
           class="col-lg-10 col-md-9 col-sm-12 content d-flex flex-column gap-3"
         >
-          <div class="container form-container mt-5">
+          <div
+            class="container form-container mt-5"
+            itemscope
+            itemtype="https://schema.org/Person"
+          >
             <h2 class="form-title text-center">
               Bergabung dengan Komunitas Penggemar Linkin Park
             </h2>
             <form action="submit.html" method="GET">
               <!-- Input Nama -->
-              <div class="mb-3">
+              <div
+                class="mb-3"
+                itemscope
+                itemprop="contactPoint"
+                itemtype="https://schema.org/ContactPoint"
+              >
                 <label for="name" class="form-label">Nama Lengkap</label>
                 <input
                   type="text"
@@ -167,6 +136,7 @@
                   id="name"
                   name="name"
                   placeholder="Masukkan nama lengkap Anda"
+                  itemprop="name"
                   required
                 />
               </div>
@@ -179,12 +149,17 @@
                   class="form-control"
                   id="birthdate"
                   name="birthdate"
+                  itemprop="birthDate"
                   required
                 />
               </div>
 
               <!-- Radio Buttons: Album Favorit -->
-              <div class="mb-3">
+              <div
+                class="mb-3"
+                itemscope
+                itemtype="https://schema.org/MusicAlbum"
+              >
                 <label class="form-label">Album Favorit Linkin Park</label>
                 <div class="form-check">
                   <input
@@ -224,7 +199,11 @@
               </div>
 
               <!-- Checkbox: Lagu Favorit -->
-              <div class="mb-3">
+              <div
+                class="mb-3"
+                itemscope
+                itemtype="https://schema.org/MusicRecording"
+              >
                 <label class="form-label">Lagu Favorit Linkin Park</label>
                 <div class="form-check">
                   <input
@@ -233,6 +212,7 @@
                     id="song1"
                     name="songs[]"
                     value="In the End"
+                    itemprop="name"
                   />
                   <label class="form-check-label" for="song1">In the End</label>
                 </div>
@@ -243,6 +223,7 @@
                     id="song2"
                     name="songs[]"
                     value="Numb"
+                    itemprop="name"
                   />
                   <label class="form-check-label" for="song2">Numb</label>
                 </div>
@@ -253,6 +234,7 @@
                     id="song3"
                     name="songs[]"
                     value="What I've Done"
+                    itemprop="name"
                   />
                   <label class="form-check-label" for="song3"
                     >What I've Done</label
