fix: microformat support pin13.net

--- a/form.html
+++ b/form.html
@@ -96,7 +96,7 @@
       </div>
     </div>
 
-    <div class="container-xxl mt-3 my-md-4 bd-layout">
+    <div class="container-xxl mt-3 my-md-4 bd-layout h-card">
       <div class="row">
         <!-- Left Sidebar -->
         <div class="col-lg-2 col-md-3 col-sm-12 sidebar">
